--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "algorithm": "c",
-        "vector": "cpp"
+        "vector": "cpp",
+        "ostream": "cpp",
+        "xtree": "cpp",
+        "tuple": "cpp"
     }
 }
